--- a/Tracker/Resources/ru.lproj/Localizable.strings
+++ b/Tracker/Resources/ru.lproj/Localizable.strings
@@ -38,9 +38,21 @@
 "thu" = "Чт";
 "fri" = "Пт";
 "sat" = "Сб";
-"sun" = "Сб";
+"sun" = "Вск";
 "everyDay" = "Каждый день";
 "categoryTextFieldPlaceholder" = "Введите название категории";
 "newCategory" = "Новая категория";
 "placeholderCategoryText" = "Привычки события можно\n объединить по смыслу";
 "addCategory" = "Добавить категорию";
+"pinned" = "Закрепленные";
+"pin" = "Закрепить";
+"unpin" = "Открепить";
+"delete" = "Удалить";
+"cancel" = "Отменить";
+"textDeleteAlert" = "Уверены что хотите удалить трекер?";
+"edit" = "Редактировать";
+"save" = "Сохранить";
+"EditingHabit" = "Редактирование привычки";
+"trackersCompleted" = "Трекеров завершено";
+"textPlaceholderStatistik" = "Анализировать пока нечего";
+"placeholderSearchBar" = "Ничего не найдено";
