--- a/Tracker/Resources/en.lproj/Localizable.strings
+++ b/Tracker/Resources/en.lproj/Localizable.strings
@@ -29,7 +29,7 @@
 "wednesday" = "Wednesday"; 
 "thursday" = "Thursday";
 "friday" = "Friday";
-"saturday" = "Суббота";
+"saturday" = "Saturday";
 "sunday" = "Sunday";
 "readyText" = "Ready";
 "mon" = "Mon";
