--- a/Tracker/Resources/ru.lproj/Localizable.strings
+++ b/Tracker/Resources/ru.lproj/Localizable.strings
@@ -56,3 +56,8 @@
 "trackersCompleted" = "Трекеров завершено";
 "textPlaceholderStatistik" = "Анализировать пока нечего";
 "placeholderSearchBar" = "Ничего не найдено";
+"allTrackers" = "Все трекеры";
+"trackersForToday" = "Трекеры на сегодня";
+"completed" = "Завершенные";
+"notCompleted" = "Не завершенные";
+"filters" = "Фильтры";
